feat: add code citations and improve documentation
- Add ATTRIBUTION.md and code_citations.md for proper code attribution
- Update documentation in docs/usage.md
- Modify error handling and utility functions
- Update app configurations and styling
- Add logging functionality

--- a/.secrets.toml
+++ b/.secrets.toml
@@ -1,9 +1,8 @@
-
 [crunch]
-api_key = "yapk-MOF1u6SqSyb8wHNeBYvbPlPQHaE7xbMZeYgkpVLqebY="
-api_url = "https://crunch.io/api/"
-username = "ian.ritchie@yougov.com"
-password = "L0RDH0rus112358"
+api_key = "your-api-key-here"
+api_url = "https://api.crunch.io/api/"
+username = "your-username"
+password = "your-password"
 
 [other_services]
 # Add other API credentials as needed
